--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <meta name="theme-color" content="#000000" />
-  <meta name="author" content="Sahib Singh">
-  <meta name="keywords" content="Sahib Singh, reactjs, ecommerce, react ecommerce website, ecommerce website, sahibsingh.vercel.app">
+  <meta name="author" content="Sindhuja Musina">
+  <meta name="keywords" content="Sindhuja Musina, reactjs, ecommerce, react ecommerce website, ecommerce website, sahibsingh.vercel.app">
   <!-- Primary Meta Tags -->
   <title>Ecommerce Website</title>
   <meta name="title" content="Ecommerce Website">
